Name:                   ghc-mod
Version:                4.0.1
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.mew.org/~kazu/proj/ghc-mod/
Synopsis:               Happy Haskell Programming
Description:            The ghc-mod command is a backend command to enrich
                        Haskell programming on editors including
                        Emacs, Vim, and Sublime.
                        The ghc-mod command is based on ghc-mod library
                        which is a wrapper of GHC API.
                        This package includes the ghc-mod command,
                        the ghc-mod library, and Emacs front-end
                        (for historical reasons).
                        For more information, please see its home page.

Category:               Development
Cabal-Version:          >= 1.10
Build-Type:             Simple
Data-Dir:               elisp
Data-Files:             Makefile ghc.el ghc-func.el ghc-doc.el ghc-comp.el
                        ghc-check.el ghc-process.el ghc-command.el ghc-info.el
                        ghc-ins-mod.el ghc-indent.el ghc-pkg.el
Extra-Source-Files:     ChangeLog
			test/data/*.cabal
                        test/data/*.hs
                        test/data/cabal.sandbox.config
                        test/data/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/dummy
                        test/data/broken-cabal/*.cabal
                        test/data/broken-sandbox/*.cabal
                        test/data/broken-sandbox/cabal.sandbox.config
                        test/data/check-test-subdir/*.cabal
                        test/data/check-test-subdir/src/Check/Test/*.hs
                        test/data/check-test-subdir/test/*.hs
                        test/data/check-test-subdir/test/Bar/*.hs
                        test/data/ghc-mod-check/*.cabal
                        test/data/ghc-mod-check/*.hs
                        test/data/ghc-mod-check/Data/*.hs
                        test/data/subdir1/subdir2/dummy

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Language.Haskell.GhcMod
                        Language.Haskell.GhcMod.Internal
  Other-Modules:        Language.Haskell.GhcMod.Browse
                        Language.Haskell.GhcMod.CabalApi
                        Language.Haskell.GhcMod.Check
                        Language.Haskell.GhcMod.Cradle
                        Language.Haskell.GhcMod.Debug
                        Language.Haskell.GhcMod.Doc
                        Language.Haskell.GhcMod.ErrMsg
                        Language.Haskell.GhcMod.Flag
                        Language.Haskell.GhcMod.GHCApi
                        Language.Haskell.GhcMod.GHCChoice
                        Language.Haskell.GhcMod.Gap
                        Language.Haskell.GhcMod.Info
                        Language.Haskell.GhcMod.Lang
                        Language.Haskell.GhcMod.Lint
                        Language.Haskell.GhcMod.List
                        Language.Haskell.GhcMod.PkgDoc
                        Language.Haskell.GhcMod.Types
  Build-Depends:        base >= 4.0 && < 5
                      , containers
                      , directory
                      , filepath
                      , ghc
                      , ghc-syb-utils
                      , hlint >= 1.8.58
                      , io-choice
                      , old-time
                      , process
                      , syb
                      , time
                      , transformers
  if impl(ghc < 7.7)
    Build-Depends:      convertible
                      , Cabal >= 1.10 && < 1.17
  else
    Build-Depends:      Cabal >= 1.18

Executable ghc-mod
  Default-Language:     Haskell2010
  Main-Is:              GHCMod.hs
  Other-Modules:        Paths_ghc_mod
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4.0 && < 5
                      , directory
                      , filepath
                      , ghc
                      , ghc-mod

Executable ghc-modi
  Default-Language:     Haskell2010
  Main-Is:              GHCModi.hs
  Other-Modules:        Paths_ghc_mod
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4.0 && < 5
                      , containers
                      , directory
                      , filepath
                      , ghc
                      , ghc-mod

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.3

Test-Suite spec
  Default-Language:     Haskell2010
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, .
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Dir
                        BrowseSpec
                        CabalApiSpec
                        CheckSpec
                        FlagSpec
                        InfoSpec
                        LangSpec
                        LintSpec
                        ListSpec
  Build-Depends:        base >= 4.0 && < 5
                      , containers
                      , directory
                      , filepath
                      , ghc
                      , ghc-syb-utils
                      , hlint >= 1.7.1
                      , io-choice
                      , old-time
                      , process
                      , syb
                      , time
                      , transformers
                      , hspec >= 1.7.1
  if impl(ghc < 7.7)
    Build-Depends:      convertible
                      , Cabal >= 1.10 && < 1.17
  else
    Build-Depends:      Cabal >= 1.18
  if impl(ghc < 7.6.0)
    Build-Depends:      executable-path

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/ghc-mod.git
