name:                simple-cabal
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Gröber
maintainer:          dxld@darkboxed.org
build-type:          Simple
cabal-version:       >=1.10

executable simple-cabal
  main-is:             Main.hs
  build-depends:       base
  default-language:    Haskell2010
