name:                cabal-preprocessors
version:             0.1.0.0
license-file:        LICENSE
author:              asd
maintainer:          asd
build-type:          Simple
cabal-version:       >=1.10

executable cabal-preprocessors
  main-is:             Main.hs
  build-depends:       base
  default-language:    Haskell2010
  other-modules:       Preprocessed
  ghc-options:         -Wall