name: check-test-subdir
version: 0.1.0
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base == 4.*
  hs-source-dirs: src
  exposed-modules: Check.Test.Subdir

test-suite test
  type: exitcode-stdio-1.0
  build-depends: base == 4.*
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall
