name:                custom-cradle
version:             0.1.0.0
homepage:            asd
license-file:        LICENSE
author:              asd
maintainer:          asd
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010