name:                duplicate-main
version:             0.1.0.0
synopsis:            Defines two executables
license:             BSD3
license-file:        LICENSE
author:              Foo
maintainer:          foo@example.com
build-type:          Simple
cabal-version:       >=1.10

executable hie-test-project
  main-is:             Main.hs
  build-depends:       base
  hs-source-dirs:      .
  default-language:    Haskell2010

executable hie-test-project2
  main-is:             OtherMain.hs
  build-depends:       base
  hs-source-dirs:      .
  default-language:    Haskell2010
